--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: # fill in your Google Analytics ID
+    id: G-PTVYXQTYDN # fill in your Google Analytics ID
   goatcounter:
     id: # fill in your GoatCounter ID
 
